# rustpbx

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.commerce  Dockerfile.contact-center  Dockerfile.cross-aarch64  Dockerfile.cross-x86_64  LICENSE  MEDIAPROXY_README.md  PRODUCT_ROADMAP.md  README.md  build.rs  build_commerce.sh  config.toml  config.toml.example  jsonrpc_router.toml  rustpbx.code-workspace  workbench-e2e-configs
.cargo/: config.toml
.cursor/rules/: rustpbx-cursor-rule.mdc
.github/workflows/: docker-image.yml  e2e.yml
config/: wholesale.toml.example
config/ivr/: ad.toml  demo.toml  main.toml  test_e2e.toml
docs/: API.md  MEDIAPROXY_README.md  README.md  api.md  api_integration_guide.md  arch.drawio  call-frequency-limit.md  call_application_framework.md  cc.md  cc_ai_first_architecture.md  configuration.md  how webrtc work with sip(en).md  how webrtc work with sip(zh).md  i18n.md  ivr_design.md  ivr_step_protocol_en.md  llm_integration.md  media-layer-design.md  observability.md  product_intro_cc.html  rwi.md  rwi_case.md  rwi_event_data_en.md  rwi_events_reference.md  rwi_events_reference_en.md  sd_pbx_extensibility.md  sip.drawio  tencent_cloud_integration.md  voice_agent_pbx.drawio  voicemail_product_spec.md  webrtc.drawio
docs/config/: 00-overview.md  01-platform.md  02-proxy-core.md  03-auth-users.md  04-routing.md  05-trunks-queues.md  06-media-recording.md  07-addons-admin-storage.md  08-sipflow.md
e2e/console/: .gitignore  package.json  playwright.config.js
examples/: audio_agent.rs  bridge_ivr_provider.py  ivr_exec_demo.py  jsonrpc_router.py  llm_demo.rs  llm_example.rs  pipeline_demo.rs  rwi_cli.rs  rwi_event_webhook.py  sipflow_bench.rs  step_ivr_provider.py  tencent_asr_tts_example.rs  voice_demo.rs  voip_bridge_ivr_provider.py
examples/go-demo/: README.md  call.go  client.go  devices.go  go.mod  go.sum  main.go  main_test.go
examples/webrtc-call/: Cargo.toml
examples/webrtc-call/src/: main.rs
examples/webrtc-demo/: Cargo.toml  README.md
examples/webrtc-demo/src/: main.rs
examples/webrtc-demo/static/: demo.js  index.html
fixtures/: test_asr_zh_16k.pcm
locales/: en.toml  zh.toml
sipflow/: Cargo.toml  bench.py  simulate.py  todo.md
sipflow/src/: main.rs  protocol.rs  storage.rs
src/: app.rs  auto_external_ip.rs  config.rs  config_store.rs  create_test_wav.rs  event.rs  fixtures.rs  http_util.rs  lib.rs  license.rs  log_reload.rs  main.rs  metrics.rs  net_tool.rs  observability.rs  preflight.rs  tls_reloader.rs  utils.rs  version.rs  voicemail
src/addons/: README.md  cc  endpoint_manager  enterprise_auth  export_reload.rs  ivr_editor  jsonrpc_router  mod.rs  registry.rs  sbc  telemetry  voicemail  wholesale
src/api/: mod.rs
src/auth/: http_token_auth_backend.rs  jwt_auth_backend.rs  jwt_validator.rs  mod.rs  phone_auth.rs
src/call/: active_call.rs  b2bua.rs  cookie.rs  ivr.rs  mod.rs  policy.rs  queue_config.rs  sip.rs  user.rs
src/callrecord/: mod.rs  recording_upload.rs  sipflow.rs  sipflow_remote_upload.rs  sipflow_upload.rs  storage.rs  tests.rs
src/console/: README.md  auth.rs  catalog.rs  config_helpers.rs  handlers.rs  i18n.rs  middleware.rs  migration.rs  mod.rs
src/handler/: README.md  ami.rs  call.rs  handler.rs  llmproxy.rs  mod.rs  processor.rs  sip.rs  webrtc.rs  webrtc_test.rs  ws.rs
src/llm/: mod.rs  tests.rs
src/media/: asr_processor.rs  audio_egress_track.rs  audio_route.rs  audio_source.rs  bridge.rs  cache.rs  capture.rs  conference_mixer.rs  denoiser.rs  dtmf.rs  endpoint.rs  engine.rs  file_track.rs  file_track_tests.rs  forwarding_track.rs  info_recording_tests.rs  jitter.rs  leg_id.rs  media_engine_tests.rs  media_pass.rs  media_stream.rs  media_track_tests.rs  mixer.rs  mixer_e2e_tests.rs  mixer_input.rs  mixer_output.rs  mixer_registry.rs  mod.rs  negotiate.rs  noise.rs  processor.rs  recorder.rs  recorder_tap.rs  recorder_tests.rs  rtc_track.rs  rtp_track_builder.rs  sdp_bridge.rs  source.rs  stream.rs  telephone_event.rs  (+9 more)
src/models/: add_leg_timeline_column.rs  add_metadata_column.rs  add_outbound_sip_trunk_id.rs  add_rewrite_columns.rs  add_sip_trunk_register_columns.rs  add_sip_trunk_rewrite_hostport.rs  add_user_mfa_columns.rs  alter_rewrite_columns_length.rs  bill_template.rs  call_record.rs  call_record_dashboard_index.rs  call_record_from_number_index.rs  call_record_indices.rs  call_record_optimization_indices.rs  config_entry.rs  department.rs  extension.rs  extension_department.rs  frequency_limit.rs  migration.rs  mod.rs  policy.rs  presence.rs  queue.rs  rbac.rs  routing.rs  sip_trunk.rs  system_notification.rs  user.rs  wholesale_agent.rs
src/playbook/: README.md
src/proxy/: acl.rs  active_call_registry.rs  auth.rs  b2bcall.rs  ban.rs  bridge.rs  call.rs  capability_headers.rs  cdr.rs  cluster_event.rs  data.rs  (+26 more)
static/: index.html  phone.html  phone_jssip.html  phone_sipjs.html
testdata/: .gitignore
tests/: README.md  agent_callout_rwi_events_e2e_test.rs  audio_content_e2e_test.rs  audio_feature_test.rs  b2bua_audio_regression_e2e_test.rs  bridge_file_output_continuity_test.rs  bridge_sipbot_e2e_test.rs  cc_full_flow_e2e_test.rs  cc_openapi_contract_test.rs  cc_supervisor_prepare_e2e_test.rs  conference_dialin_e2e_test.rs  dynamic_leg_e2e_test.rs  e2e_call_test.py  e2e_cc_test.rs  e2e_conference_test.rs  e2e_ivr_test.py  e2e_p2p_comprehensive_test.rs  e2e_p2p_demo_test.rs  e2e_queue_comprehensive_test.rs  e2e_queue_test.rs  e2e_rwi_test.py  e2e_wholesale_test.rs  inject_audio_e2e_test.rs  integration_call.sh  ivr_dtmf_queue_agent_e2e_test.rs  ivr_greeting_audio_e2e_test.rs  ivr_multi_key_dtmf_e2e_test.rs  ivr_publish_version_e2e_test.rs  ivr_queue_agent_audio_e2e_test.rs  ivr_queue_agent_e2e_test.rs  mcu_conference_enhanced_e2e_test.rs  mcu_three_way_e2e_test.rs  mcu_three_way_test.rs  queue_early_media_e2e_test.rs  queue_parallel_e2e_test.rs  queue_prompts_e2e_test.rs  ringback_mode_test.rs  rwi_binary_pcm_e2e_test.rs  rwi_cc_phone_lifecycle_e2e_test.rs  rwi_comprehensive_event_test.rs  (+20 more)
tools/: verify_i18n.rs
(+378 files in other folders)
