[package]
name = "rustpbx"
version = "0.3.18"
edition = "2024"
default-run = "rustpbx"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A SIP PBX implementation in Rust"
license = "MIT"
repository = "https://github.com/restsend/rustpbx"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "pbx", "webrtc"]
categories = ["network-programming", "multimedia"]

[features]
opus = ["audio-codec/opus"]
console = ["dep:minijinja"]
addon-acme = []
addon-wholesale = ["flate2"]
addon-archive = ["flate2"]
addon-transcript = []
commerce = ["addon-wholesale"]
default = ["opus", "console", "addon-acme", "addon-transcript", "addon-archive"]
perfcli-bin = []
text2wav-bin = []
wav2text-bin = []

[dependencies]
anyhow = "1"
async-trait = "0.1.88"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["ws", "tokio", "multipart"] }
bytes = "1"
futures = "0.3.31"
rustls = { version = "0.23.36", features = ["ring"] }
minijinja = { version = "2", features = ["loader", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
glob = "0.3.3"
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tokio-util = "0.7.18"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4"] }
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.9.8"
toml_edit = "0.23.9"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
rsipstack = "0.4.0"
audio-codec = { version = "0.3.30", default-features = false }
rustrtc = "0.2.34"
rsip = "0.4.0"
reqwest = { version = "0.13.1", features = [
    "json",
    "stream",
    "rustls",
    "multipart",
    "form",
] }
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4.3"
dotenv = "0.15"
md-5 = "0.10.6"
once_cell = "1.21.3"
cpal = "0.17.0"
regex = "1.12.2"
ring = "0.17.14"
http = "1.4.0"
urlencoding = "2.1.3"
byteorder = "1.5.0"
ipnetwork = "0.21.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "mysql",
    "any",
] }
sea-orm = { version = "1.1.19", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
] }
sea-orm-migration = { version = "1.1.19", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
object_store = { version = "0.13.0", features = ["aws", "azure", "gcp"] }
humantime = "2.3.0"
serde_with = "3.16.1"
flate2 = { version = "1.0", optional = true }
console-subscriber = "0.5.0"
lru = "0.16.2"
phonenumber = "0.3.7"
tower-http = { version = "0.6.8", features = [
    "fs",
    "cors",
    "compression-gzip",
] }
instant-acme = "0.8.4"
rcgen = "0.14.6"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
sysinfo = "0.37.2"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"
mockall = "0.14.0"
warp = { version = "0.4.1", features = ["server", "websocket"] }
portpicker = "0.1.1"


[[bin]]
name = "rustpbx"
path = "src/bin/rustpbx.rs"
