[package]
name = "rustpbx"
version = "0.4.11"
edition = "2024"
default-run = "rustpbx"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A SIP PBX implementation in Rust"
license = "MIT"
repository = "https://github.com/restsend/rustpbx"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "pbx", "webrtc"]
categories = ["network-programming", "multimedia"]
exclude = [
    "src/addons/cc",
    "src/addons/cc/**",
    "src/addons/sbc",
    "src/addons/sbc/**",
    "src/addons/wholesale",
    "src/addons/wholesale/**",
    "src/addons/endpoint_manager",
    "src/addons/endpoint_manager/**",
    "src/addons/enterprise_auth",
    "src/addons/enterprise_auth/**",
    "src/addons/ivr_editor",
    "src/addons/ivr_editor/**",
    "src/addons/telemetry",
    "src/addons/telemetry/**",
    "src/addons/voicemail",
    "src/addons/voicemail/**",
    "docs",
    "docs/**",
    "fixtures",
    "fixtures/**",
    "tests",
    "tests/**",
    ".github",
    ".github/**",
    "Dockerfile",
    "Dockerfile.*",
    "Cross.toml",
    "*.sql",
    "rustpbx.sqlite3",
]

[features]
cross = []
console = ["dep:minijinja"]
addon-acme = ["instant-acme"]
addon-wholesale = [
    "dep:async-stream",
    "dep:async-compression",
    "dep:arc-swap",
    "dep:country-emoji",
    "dep:hex",
    "dep:iso_currency",
]
addon-archive = []
addon-endpoint-manager = []
addon-enterprise-auth = ["dep:ldap3", "dep:ring"]
addon-transcript = []
addon-voicemail = ["dep:url"]
addon-ivr-editor = ["dep:hex"]
addon-cc = []

addon-sbc = ["dep:minijinja", "dep:evalexpr"]
addon-observability = ["metrics-exporter-prometheus"]
addon-telemetry = [
    "addon-observability",
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]
commerce = [
    "addon-endpoint-manager",
    "addon-enterprise-auth",
    "addon-voicemail",
    "addon-ivr-editor",
    "addon-telemetry",
    "addon-sbc",
]
wholesale = ["addon-wholesale", "dep:hex"]
contact-center = [
    "addon-cc",
    "addon-endpoint-manager",
    "addon-enterprise-auth",
    "addon-ivr-editor",
    "addon-voicemail",
    "addon-telemetry",
]

default = [
    "console",
    "addon-acme",
    "addon-transcript",
    "addon-archive",
    "addon-observability",
]


[dependencies]
instant-acme = { version = "0.8.5", default-features = false, features = [
    "hyper-rustls",
    "ring",
    "rcgen",
    "time",
], optional = true }
anyhow = "1"
async-trait = "0.1.88"
async-stream = { version = "0.3.6", optional = true }
axum = { version = "0.8.9", features = ["ws", "tokio", "multipart"] }
bytes = "1"
futures = "0.3.31"
rustls = { version = "0.23.41", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
minijinja = { version = "2.21.0", features = [
    "loader",
    "json",
], optional = true }
evalexpr = { version = "11.3.1", features = ["regex_support"], optional = true }
serde = { version = "1", features = ["derive"] }
glob = "0.3.3"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.52.2", features = ["full", "tracing", "test-util"] }
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
tokio-util = "0.7.18"
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-native-roots",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
url = { version = "2.5.8", optional = true }
uuid = { version = "1.23.3", features = ["v4"] }
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
toml_edit = { version = "0.25.12", features = ["serde"] }
rand = "0.10.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
rsipstack = "0.5.18"
hex = { version = "0.4.3", optional = true }
#rsipstack = { path = "../rsipstack" }
audio-codec = "0.3.40"
rustrtc = "0.3.89"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "stream",
    "rustls-no-provider",
    "multipart",
    "form",
    "query",
    "gzip",
    "blocking",
    "http2",
    "charset",
] }
base64 = "0.22.1"
hmac = "0.13.0"
sha2 = "0.11.0"
dotenvy = "0.15.7"
md-5 = "0.11.0"
once_cell = "1.21.4"
regex = "1.12.4"
http = "1.4.2"
urlencoding = "2.1.3"
ipnetwork = "0.21.1"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "sqlite",
    "mysql",
    "any",
] }
sea-orm = { version = "1.1.20", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlite-use-returning-for-3_35",
] }
sea-orm-migration = { version = "1.1.20", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlite-use-returning-for-3_35",
] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
object_store = { version = "0.14.0", default-features = false, features = [
    "fs",
    "aws-base",
    "azure-base",
    "gcp-base",
    "reqwest",
    "ring",
] }
humantime = "2.3.0"
time = "0.3.51"
serde_with = "3.21.0"
async-compression = { version = "0.4", default-features = false, features = [
    "tokio",
    "gzip",
], optional = true }
flate2 = "1"
console-subscriber = "0.5.0"
crossbeam-channel = "0.5"
lru = "0.18.0"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = [
    "http-listener",
    "push-gateway-no-tls-provider",
], optional = true }
# OTel stack — only pulled in for the commercial `addon-telemetry` feature.
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry-otlp = { version = "0.32.0", features = [
    "grpc-tonic",
    "trace",
    "metrics",
], optional = true }
opentelemetry_sdk = { version = "0.32.1", features = [
    "rt-tokio",
], optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }
phonenumber = "0.3.9"
tower-http = { version = "0.7.0", features = [
    "fs",
    "cors",
    "compression-gzip",
] }
rcgen = { version = "0.14.8", default-features = false, features = [
    "pem",
    "ring",
] }
axum-server = { version = "0.8.0", default-features = false, features = [
    "tls-rustls-no-provider",
] }
csv = "1.4.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
ruzstd = "0.8"
minimp3 = "0.6.1"
totp-rs = { version = "5.7.1", features = ["qr", "gen_secret"] }
ldap3 = { version = "0.12.1", optional = true }
ring = { version = "0.17", optional = true }
tempfile = "3.27.0"
country-emoji = { version = "0.3.5", optional = true }
arc-swap = { version = "1.7.1", optional = true }
iso_currency = { version = "0.5.3", default-features = false, features = ["iterator"], optional = true }
flowdb = { version = "0.7.4", default-features = false }


[dev-dependencies]
portpicker = "0.1.1"
tower = { version = "0.5", features = ["util"] }
sipbot = { version = "0.2.39", default-features = false }
serde_urlencoded = "0.7"
ctor = "1.0.7"

[build-dependencies]
chrono = "0.4"

[profile.dev]
split-debuginfo = "packed"
debug = 1
codegen-units = 256

[profile.release]
strip = "symbols"

[[bin]]
name = "rustpbx"
path = "src/bin/rustpbx.rs"

[[bin]]
name = "sipflow"
path = "src/bin/sipflow.rs"

[[bin]]
name = "verify-i18n"
path = "tools/verify_i18n.rs"
