[package]
name = "sipflow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
byteorder = "1.5"
hound = "3.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["fs", "trace"] }
bytes = "1.6"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
audio-codec = { version = "0.3.30", features = ["opus"] }
socket2 = "0.5"
