[package]
name = "webrtc-call"
version = "0.1.0"
edition = "2021"

[dependencies]
rustpbx = { path = "../.." }
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
webrtc = "0.12.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
cpal = "0.15.2"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
async-trait = "0.1"
chrono = "0.4.40"
