[package]
name = "webrtc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
bytes = "1.5"
futures = "0.3"
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7.8"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
webrtc = { version = "0.12.0", features = ["native-tls"] }
rustpbx = { path = "../.." }
